chore: edited html, layout code

--- a/index.html
+++ b/index.html
@@ -3,10 +3,62 @@
 <html>
     <head>
         <title> Me, Myself and I</title>
+        <nav>
+            <a href="#">HTML</a> |
+            <a href="#">CSS</a> |
+            <a href="#">JavaScript</a> |
+            <a href="#">Python</a>
+        </nav>
+
+        <style>
+
+            .featuredPhoto {
+            border: 5px outset red;
+            background-color: pink;
+            text-align: center;
+            }
+
+            .previousProject {
+            border: 5px outset blue;
+            background-color: lightblue;
+            text-align: center;
+            }
+
+            .skillsAndAutobio {
+            border: 5px outset yellow;
+            background-color: yellowgreen;
+            text-align: center;
+            }
+        </style>
     </head>
 
     <body>
-        <p> Hello world</p>
+        <div class="featuredPhoto" background>
+            <p>featuredPhoto</p>
+        </div>
+
+        <div class="previousProject">
+            <p>previousProject</p>
+        </div>
+
+        <div class="skillsAndAutobio">
+
+            <span>
+                <div class="skills">
+                    <p>skills</p>
+                </div>
+
+                <div class="autobiography">
+                    <p>autobiography</p>
+                </div>
+                
+            </span>
+
+        </div>
+
+        <footer> I am the foot</footer>
+
+
     </body>
 
 
