--- a/index.html
+++ b/index.html
@@ -11,14 +11,45 @@
         </nav>
 
         <style>
+            /* h1 {
+  
+            font-size: 100px;
+            } */
 
-            .featuredPhoto {
-            border: 5px outset red;
-            background-color: pink;
+            .featuredPhotoContainer {
+            /* background-image: url(./img/img_feature.jpg);
+            background-size: 100% 100%; */
+            /* text-align: center; */
+            /* text-emphasis: none; */
+            /* background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-size: cover; */
+            /* height: 10;
+            width: 10; */
+            /* background-color: powderblue; */
+            /* display: flex; */
+
+            position: relative;
             text-align: center;
+            color: black;
+            font-size: 50px;
+
+
             }
 
-            .previousProject {
+            .featuredPhotoImg{
+                height: auto;
+                width: 100%;
+            }
+
+            .featuredPhotoText{
+            position: absolute;
+            top: 25%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            }
+
+            /* .previousProject {
             border: 5px outset blue;
             background-color: lightblue;
             text-align: center;
@@ -28,16 +59,17 @@
             border: 5px outset yellow;
             background-color: yellowgreen;
             text-align: center;
-            }
+            } */
         </style>
     </head>
 
     <body>
-        <div class="featuredPhoto" background>
-            <p>featuredPhoto</p>
+        <div class="featuredPhotoContainer" >
+           <img src="./img/img_feature.png" alt="featuredPhoto" class="featuredPhotoImg">
+           <div class="featuredPhotoText">Ma. Aira Gezelyn H. Moon</div>
         </div>
 
-        <div class="previousProject">
+        <!-- <div class="previousProject">
             <p>previousProject</p>
         </div>
 
@@ -56,7 +88,7 @@
 
         </div>
 
-        <footer> I am the foot</footer>
+        <footer> I am the foot</footer> -->
 
 
     </body>
