chore: edited previousProject part in html file

--- a/index.html
+++ b/index.html
@@ -54,6 +54,17 @@
             font-size: 20px;
             }
 
+            .previousProject {
+            display: flex;
+            }
+
+            .column {
+            text-align: center;
+            font-size: 20px;
+            flex: 33.33%;
+            padding: 5px;
+            }
+
 
 
             /* .navbar {
@@ -84,10 +95,10 @@
 
         <div class="navbar">
             <img src="./img/img_avatar.png" alt="Avatar" class="img_avatar">
-            <a href="#"><i class="fw"></i>Contact</a> 
-            <a href="#"><i></i>Facebook</a> 
-            <a href="#"><i></i>LinkedIn</a> 
-            <a href="#"><i></i>Github</a> 
+            <a href="#">Contact</a> 
+            <a href="#">Facebook</a> 
+            <a href="#">LinkedIn</a> 
+            <a href="#">Github</a> 
 
         </div>
         
@@ -99,9 +110,28 @@
 
         <!-- <div class="previousProject">
             <p>previousProject</p>
-        </div>
+        </div> -->
 
-        <div class="skillsAndAutobio">
+        <div class="previousProject">
+            <div class="column">
+                <p>Minesweeper in Python</p>
+              <img src="./img/minesweeper.png" alt="Minesweeper" style="width:100%">
+            </div>
+            <div class="column">
+                <p>Library System in C</p>
+              <img src="./img/library.jpg" alt="Library" style="width:100%">
+            </div>
+            <div class="column">
+                <p>Everwing in Java</p>
+              <img src="./img/everwing.png" alt="everwing" style="width:100%">
+            </div>
+            <div class="column">
+                <p>Various Websites</p>
+                <img src="./img/websites.jpg" alt="websites" style="width:100%">
+              </div>
+          </div>
+
+        <!-- <div class="skillsAndAutobio">
 
             <span>
                 <div class="skills">
