--- a/index.html
+++ b/index.html
@@ -58,10 +58,14 @@
             display: flex;
             }
 
+            .killsAndAutobio{
+            display: flex;
+            }
+
             .column {
             text-align: center;
             font-size: 20px;
-            flex: 33.33%;
+            flex: 25%;
             padding: 5px;
             }
 
@@ -130,7 +134,23 @@
                 <img src="./img/websites.jpg" alt="websites" style="width:100%">
               </div>
           </div>
+          
+        <div class="skillsAndAutobio">
+            <div class="SkillColumn">
+                <ul>
+                    <li>Proffic</li>
+                    <li>Tea</li>
+                    <li>Milk</li>
+                    <li>Milk</li>
 
+                </ul>
+                
+            </div>
+            <div class="BioColumn">
+                <p>boo ho</p>
+
+            </div>
+        </div>
         <!-- <div class="skillsAndAutobio">
 
             <span>
