chore: edited skills line in html code

--- a/index.html
+++ b/index.html
@@ -138,10 +138,10 @@
         <div class="skillsAndAutobio">
             <div class="SkillColumn">
                 <ul>
-                    <li>Proffic</li>
-                    <li>Tea</li>
-                    <li>Milk</li>
-                    <li>Milk</li>
+                    <li>Proficient with HTML/CSS, JAvaScript amd responsice design</li>
+                    <li>knowledgeable with FrontEnd Frameworks,Back-end Developments and Databases</li>
+                    <li>Web Security</li>
+                    <li>Performance Optimization</li>
 
                 </ul>
                 
@@ -164,9 +164,9 @@
                 
             </span>
 
-        </div>
+        </div> -->
 
-        <footer> I am the foot</footer> -->
+        <!-- <footer> I am the foot</footer> -->
 
 
     </body>
